--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,40 +29,62 @@
   <!-- Size should be 32 x 32 pixels -->
   <!-- %= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
 
-    <%= javascript_include_tag "application" %>
+    <%= javascript_pack_tag "application" %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
   <!--[if lt IE 9]>
   <script
       src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"
-      type="text/javascript"></script>
+      type="text/frontend"></script>
   <![endif]-->
 </head>
 <body>
 
-<div class="navbar navbar-default navbar-static-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-
     <%= link_to 'BBQ!', root_path, class: 'navbar-brand' %>
 
-    <div class="navbar-collapse collapse navbar-responsive-collapse">
-      <ul class="nav navbar-nav">
-        <% if user_signed_in? %>
-          <li><%= link_to 'Профиль', current_user %></li>
-          <li><%= link_to 'Выйти', destroy_user_session_path, method: :delete %></li>
-        <% else %>
-          <li><%= link_to 'Войти', new_user_session_path %></li>
-          <li><%= link_to 'Зарегистрироваться', new_user_registration_path %></li>
-        <% end %>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home
+            <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown link
+          </a>
+        </li>
+        <li>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
       </ul>
+      <div class="collapse navbar-collapse align-items-center" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto align-items-center">
+          <% if user_signed_in? %>
+            <li class="nav-item"><%= link_to 'Профиль', current_user, class: "nav-link" %></li>
+            <li class="nav-item"><%= link_to 'Выйти', destroy_user_session_path, method: :delete, class: "nav-link" %></li>
+          <% else %>
+            <li class="nav-item"><%= link_to 'Войти', new_user_session_path, class: "nav-link" %></li>
+            <li class="nav-item"><%= link_to 'Зарегистрироваться', new_user_registration_path, class: "nav-link" %></li>
+          <% end %>
+        </ul>
+      </div>
     </div>
-  </div>
-</div>
+</nav>
 
 <div class="container">
   <div class="row">
