--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <title><%= content_for?(:title) ? yield(:title) : "Bbq" %></title>
   <%= csrf_meta_tags %>
 
-  <%= stylesheet_link_tag "application", :media => "all" %>
+  <%= stylesheet_pack_tag "application", :media => "all" %>
 
   <!-- For third-generation iPad with high-resolution Retina display: -->
   <!-- Size should be 144 x 144 pixels -->
@@ -29,7 +29,7 @@
   <!-- Size should be 32 x 32 pixels -->
   <!-- %= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
 
-    <%= javascript_pack_tag "application" %>
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
   <!--[if lt IE 9]>
@@ -89,7 +89,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-9">
-      <%= bootstrap_flash %>
+      <!-- %= bootstrap_flash % -->
       <%= yield %>
     </div>
   </div><!--/row-->
