--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -4,8 +4,8 @@
 
     <%= image_pack_tag 'event_thumb.jpg' %>
 
-    <%= content_tag 'div', '', class: 'event-background',
-      style: "background-image: image-url('event_thumb.jpg')" %>
+    <%= content_tag 'div', '', class: 'event-background', style: "background-image: url(#{image_url('event_thumb.jpg')})" %>
+    <%#= content_tag 'div', '', class: 'event-background', style: "background-image: url('event_thumb.jpg')" %>
 
     <div class="thumbnail-inner event-info-inner">
       <div class="caption">
