--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Event</h1>
+<h1>Изменить событие</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @event %> |
-<%= link_to 'Back', events_path %>
+<%= link_to t('action.show'), @event %> |
+<%= link_to t('action.back'), events_path %>
