fix style with background image, fix menu, sqoosh jpgs

--- a/app/frontend/stylesheets/events.css
+++ b/app/frontend/stylesheets/events.css
@@ -20,6 +20,8 @@
 
   background-size: cover;
   background-position: center;
+  background-image: url("~images/event_thumb.jpg");
+
 
   filter: blur(5px);
   -webkit-filter: blur(5px);
