--- a/app/frontend/stylesheets/application.scss
+++ b/app/frontend/stylesheets/application.scss
@@ -1,4 +1,5 @@
 // app/javascript/stylesheets/application.scss
 
-@import "./events.css";
 @import 'bootstrap/scss/bootstrap';
+@import "./events.css";
+@import "./application.css";
