--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -2,10 +2,8 @@
 <div class="col-sm-6 col-md-4">
   <div class="thumbnail">
 
-    <%= image_pack_tag 'event_thumb.jpg' %>
 
-    <%= content_tag 'div', '', class: 'event-background', style: "background-image: url(#{image_url('event_thumb.jpg')})" %>
-    <%#= content_tag 'div', '', class: 'event-background', style: "background-image: url('event_thumb.jpg')" %>
+    <%= content_tag :div, '', class: 'event-background' %>
 
     <div class="thumbnail-inner event-info-inner">
       <div class="caption">
