--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,9 +1,7 @@
 <div class="event">
   <div class="event-info row">
     <div class="col-md-12">
-      <%= content_tag 'div', '', class: 'event-background',
-                      style: "background-image: image-url('event.jpg')" %>
-
+      <%= content_tag :div, '', class: 'event-background' %>
       <div class="event-info-inner row">
         <div class="col-md-6">
           <div class="event-description">
@@ -18,8 +16,7 @@
           <div class="buffer-top">
             <% if current_user_can_edit?(@event) %>
               <div class="buffer-both">
-                <%= link_to 'Изменить', edit_event_path(@event),
-                            class: 'btn btn-primary' %>
+                <%= link_to 'Изменить', edit_event_path(@event), class: 'btn btn-primary' %>
               </div>
             <% end %>
           </div>
