--- a/app/frontend/stylesheets/application.scss
+++ b/app/frontend/stylesheets/application.scss
@@ -1,5 +1,5 @@
 // app/javascript/stylesheets/application.scss
 
 @import 'bootstrap/scss/bootstrap';
-@import "./events.css";
-@import "./application.css";
+@import "events.css";
+@import "bbq.css";
