--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -17,6 +17,7 @@
             <% if current_user_can_edit?(@event) %>
               <div class="buffer-both">
                 <%= link_to 'Изменить', edit_event_path(@event), class: 'btn btn-primary' %>
+                <%= link_to 'Destroy', @event, method: :delete, data: { confirm: 'Are you sure?' } %>
               </div>
             <% end %>
           </div>
