--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -16,8 +16,9 @@
           <div class="buffer-top">
             <% if current_user_can_edit?(@event) %>
               <div class="buffer-both">
-                <%= link_to 'Изменить', edit_event_path(@event), class: 'btn btn-primary' %>
-                <%= link_to 'Destroy', @event, method: :delete, data: { confirm: 'Are you sure?' } %>
+                <%= link_to t('action.update'), edit_event_path(@event), class: 'btn btn-primary' %>
+                <%= link_to t('action.destroy'), @event, method: :delete,
+                            data: { confirm: t('are_you_sure') }, class: 'btn btn-danger' %>
               </div>
             <% end %>
           </div>
