--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="col-md-6 buffer-top">
-    <%= render 'form' %>
+    <%= render partial: 'form', locals: { user: @user } %>
 
     <p class="buffer-top">
       <%= link_to 'Сменить пароль', edit_user_registration_path %>
