add alert and notice to layout

--- a/app/frontend/stylesheets/application.scss
+++ b/app/frontend/stylesheets/application.scss
@@ -1,7 +1,7 @@
 @import './bootstrap_custom.scss';
 
-@import "./bbq.css";
-@import "./events.css";
+@import "./bbq";
+@import "./events";
 
 
 //### 1. Add the entire bootstrap framework javascript and css
