--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang=ru>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%= content_for?(:title) ? yield(:title) : t('app.name') %></title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-    <%= stylesheet_pack_tag 'application', media: 'all' %>
-    <%= javascript_pack_tag 'application' %>
-  </head>
+  <%= stylesheet_pack_tag 'application', media: 'all' %>
+  <%= javascript_pack_tag 'application' %>
+</head>
 
-  <body>
+<body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
     <%= link_to t('app.name'), root_path, class: 'navbar-brand' %>
@@ -41,8 +41,11 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-9">
-      <p class="notice"><%= notice %><%= alert %></p>
-      <!-- %= bootstrap_flash % -->
+      <% flash.each do |key, value| %>
+        <div class="alert alert-<%= key %>" role="alert">
+          <%= value %>
+        </div>
+      <% end %>
       <%= yield %>
     </div>
   </div><!--/row-->
@@ -53,5 +56,5 @@
 
 </div> <!-- /container -->
 
-  </body>
+</body>
 </html>
