--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,8 @@
 
   <p class="buffer-top">
     <% if @user == current_user %>
-      <p class="buffer-top"><%= link_to 'Редактировать профиль', edit_user_path(@user), class: 'btn btn-default' %></p>
+      <p class="buffer-top"><%= link_to t("action.edit_profile"), edit_user_path(@user),
+                                        class: 'btn btn-primary btn-block' %></p>
     <% end %>
   </p>
 </div>
@@ -17,8 +18,7 @@
         <%= render partial: 'events/event', collection: @user.events %>
       </div>
     <% else %>
-      <p class="buffer-top">Пользователь пока не организовал ни одного
-        события</p>
+      <p class="buffer-top">Пользователь пока не организовал ни одного события</p>
     <% end %>
   </div>
 </div>
