--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -2,8 +2,9 @@
   <div class="col-lg-6 col-md-6 ml-auto mr-auto">
     <h2><%= t('.forgot_your_password', :default => 'Forgot your password?') %></h2>
 
-    <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => {:method => :post}) do |f| %>
-      <%= render partial: 'devise/shared/error_messages', resource: resource %>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name),
+                 html: {method: :post}) do |f| %>
+      <%= render 'devise/shared/error_messages', resource: resource %>
 
       <div class="form-group">
         <%= f.label :email %>
