--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,15 +1,15 @@
 <div class="row">
-  <div class="col-lg-6 col-md-6 ml-auto mr-auto">
+  <div class="col-lg-8 col-md-6 ml-auto mr-auto">
     <h2><%= t('.title', resource: resource_class.model_name.human,
               default: "Edit #{resource_name.to_s.humanize}") %></h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name),
                  html: {method: :put}) do |f| %>
-      <% render partial: 'devise/shared/error_messages', resource: resource %>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="form-group">
         <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, placeholder: 'Email Address', class: 'form-control' %>
+        <%= f.email_field :email, placeholder: 'Email Address', class: 'form-control' %>
       </div>
 
       <%- if devise_mapping.confirmable? && resource.pending_reconfirmation? -%>
@@ -21,7 +21,7 @@
       <div class="form-group"><%= f.label :password %>
         <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it', :default => "leave blank if you don't want to change it") %>
           )</i><br/>
-        <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+        <%= f.password_field :password, autofocus: true, autocomplete: "off", class: 'form-control' %>
       </div>
 
       <div class="form-group">
