--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <%= link_to t('app.name'), root_path, class: 'navbar-brand' %>
+    <a href="<%= root_path %>" class="navbar-brand">
+      <span class="text-uppercase font-weight-bold"><%= t('app.name') %></span>
+    </a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -27,11 +29,11 @@
       <div class="collapse navbar-collapse align-items-center" id="navbarResponsive">
         <ul class="navbar-nav ml-auto align-items-center">
           <% if user_signed_in? %>
-            <li class="nav-item"><%= link_to 'Профиль', current_user, class: "nav-link" %></li>
-            <li class="nav-item"><%= link_to 'Выйти', destroy_user_session_path, method: :delete, class: "nav-link" %></li>
+            <li class="nav-item"><%= link_to current_user.name, current_user, class: "nav-link" %></li>
+            <li class="nav-item"><%= link_to t('action.sign_out', default: "Sign out"), destroy_user_session_path, method: :delete, class: "nav-link" %></li>
           <% else %>
-            <li class="nav-item"><%= link_to 'Войти', new_user_session_path, class: "nav-link" %></li>
-            <li class="nav-item"><%= link_to 'Зарегистрироваться', new_user_registration_path, class: "nav-link" %></li>
+            <li class="nav-item"><%= link_to t('action.sign_in', default: "Sign in"), new_user_session_path, class: "nav-link" %></li>
+            <li class="nav-item"><%= link_to link_to t('action.sign_up', default: "Sign up"), new_user_registration_path, class: "nav-link" %></li>
           <% end %>
         </ul>
       </div>
@@ -49,12 +51,13 @@
       <%= yield %>
     </div>
   </div><!--/row-->
-
-  <footer>
-    <p>&copy; <%= t('app.company') %> 2020</p>
-  </footer>
-
 </div> <!-- /container -->
+
+<footer class="page-footer font-large blue">
+  <div class="text-center py-3">© 2020 Copyright:
+    <a href="/"> <%= t('app.company') %></a>
+  </div>
+</footer>
 
 </body>
 </html>
