--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,12 +3,12 @@
 
   <div class="form-group">
     <%= f.label :name %>
-    <%= f.text_field :name, class: 'form-control' %>
+    <%= f.text_field :name, autofocus: true, class: 'form-control' %>
   </div>
 
   <div class="form-group">
     <%= f.label :email %>
-    <%= f.text_field :email, class: 'form-control' %>
+    <%= f.text_field :email, placeholder: 'Email Address', class: 'form-control' %>
   </div>
 
   <div class="actions">
