--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,11 +1,11 @@
 <div class="row">
-  <div class="col-lg-6 col-md-6 ml-auto mr-auto">
+  <div class="col-lg-8 col-md-6 ml-auto mr-auto">
     <h2><%= t('.title', resource: resource_class.model_name.human,
               default: "Edit #{resource_name.to_s.humanize}") %></h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name),
                  html: {method: :put}) do |f| %>
-      <% render partial: 'devise/shared/error_messages', resource: resource %>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="form-group">
         <%= f.label :email %>
