--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
     <a href="<%= root_path %>" class="navbar-brand">
+      <%= image_pack_tag("logo.jpg", width: 70) %>
       <span class="text-uppercase font-weight-bold"><%= t('app.name') %></span>
     </a>
 
