--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
 
 <footer class="page-footer font-large blue">
   <div class="text-center py-3">© 2020 Copyright:
-    <a href="/"> <%= t('app.company') %></a>
+    <a href="https://bikmansurov.ru"> <%= t('app.company') %></a>
   </div>
 </footer>
 
