add font awesome for trash icon

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -10,10 +10,11 @@
     </span>
     <em><%= l comment.created_at, format: :short %></em>
     <% if current_user_can_edit?(comment) %>
-        <%= link_to(
-                fa_icon('trash'), event_comment_path(comment.event, comment),
-                method: :delete, data: {confirm: t('.destroy_confirm')}
-            ) %>
+      <%= link_to(event_comment_path(comment.event, comment),
+                  html_options = { method: :delete, data: { confirm: t('.destroy_confirm') } }) do %>
+        <i class="fa fa-trash mx-2" aria-hidden="true"></i>
+      <% end %>
+
     <% end %>
   </p>
 </div>
