add phtos for events, add avatar on top menu if user logged in

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="text-center">
   <h1><%= @user.name %></h1>
-  <%= image_tag user_avatar(@user) %>
+  <%= image_tag user_avatar_thumb(@user) %>
   <p class="buffer-top">
     <% if @user == current_user %>
       <p class="buffer-top"><%= link_to t("action.edit_profile"), edit_user_path(@user),
