--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,7 +1,10 @@
 <div class="event">
   <div class="event-info row">
     <div class="col-md-12">
-      <%= content_tag :div, '', class: 'event-background' %>
+
+      <%= content_tag 'div', '', class: 'event-background',
+        style: "background-image: url(#{event_photo(@event)})" %>
+
       <div class="event-info-inner row">
         <div class="col-md-6">
           <div class="event-description">
@@ -29,6 +32,16 @@
 
   <div class="row">
     <div class="col-md-8">
+       <div class="event-photos">
+        <div class="event-photos-gallery">
+          <%= render partial: 'photos/photo', collection: @event.photos.persisted.except(@photo) %>
+        </div>
+       </div>
+
+      <div class="event-photo-form">
+        <%= render partial: 'photos/form', locals: {photo: @photo || @event.photos.build} %>
+      </div>
+
       <div class="event-comments buffer-top">
         <%= render partial: 'comments/form',
                    locals: {comment: @comment || @event.comments.build} %>
