--- a/app/frontend/stylesheets/events.css
+++ b/app/frontend/stylesheets/events.css
@@ -20,7 +20,7 @@
 
   background-size: cover;
   background-position: center;
-  background-image: url("~images/event_thumb.jpg");
+  /* background-image: url("~images/event_thumb.jpg"); */
 
 
   filter: blur(5px);
