--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -2,7 +2,8 @@
 <div class="col-sm-6 col-md-4">
   <div class="thumbnail">
 
-    <%= content_tag :div, '', class: 'event-background' %>
+    <%= content_tag 'div', '', class: 'event-background',
+        style: "background-image: url(#{event_photo(event)})" %>
 
     <div class="thumbnail-inner event-info-inner">
       <div class="caption">
