--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -15,4 +15,9 @@
       </div>
     </div>
   </div>
+  <div>
+  <% event.visitors.each do |user| %>
+    <%= image_tag user_avatar_thumb(user), class: 'img-icon', title: user.name %>
+  <% end %>
+</div>
 </div>
