--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,7 +1,5 @@
 <div class="row">
   <div class="col-lg-4 col-md-6 ml-auto mr-auto">
-
-
     <h2><%= t('.change_your_password', :default => 'Change your password') %></h2>
 
     <%= form_for(resource, as: resource_name,
@@ -10,15 +8,16 @@
 
       <%= f.hidden_field :reset_password_token %>
 
-      <div><%= f.label :password, t('.new_password', :default => 'New password') %>
-        <br/>
-        <%= f.password_field :password %></div>
+      <div class="form-group">
+        <%= f.label :password, t('.new_password', default: 'New password') %>
+        <%= f.password_field :password, autofocus: true, autocomplete: "off", class: 'form-control' %>
+      </div>
 
-      <div><%= f.label :password_confirmation, t('.confirm_new_password', :default => 'Confirm new password') %>
-        <br/>
-        <%= f.password_field :password_confirmation %></div>
+      <div class="form-group">
+        <%= f.label :password_confirmation, t('.confirm_new_password', default: 'Confirm new password') %>
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %></div>
 
-      <div><%= f.submit t('.change_my_password', :default => 'Change my password') %></div>
+      <div><%= f.submit t('.change_my_password', default: 'Change my password'), class: "btn btn-primary btn-block" %></div>
     <% end %>
 
     <%= render "devise/shared/links" %>
