--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -14,7 +14,12 @@
 
   <div class="form-group">
     <%= f.label :datetime %>
-    <p><%= f.datetime_select :datetime, class: 'form-control' %></p>
+    <%= f.text_field :datetime,
+                     autocomplete: 'off',
+                     value: l(event.datetime, format: :short),
+                     class: 'datepicker-here form-control',
+                     'data-timepicker' => true,
+                     'minutes-step' => '5' %>
   </div>
 
   <div class="form-group">
