--- a/app/views/partials/_form_errors.html.erb
+++ b/app/views/partials/_form_errors.html.erb
@@ -2,12 +2,10 @@
 
 <% if errors.any? %>
   <div class="alert alert-danger">
-    <span>
-        <%= I18n.t("errors.messages.not_saved",
-                 count: errors.count,
-                 resource: model.class.model_name.human)
-      %>
-    </span>
+    <span><%= I18n.t("errors.messages.not_saved",
+                     count: errors.count,
+                     resource: model.class.model_name.human)
+    %></span>
     <ul>
       <% errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -15,4 +13,3 @@
     </ul>
   </div>
 <% end %>
-
