--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,9 +1,7 @@
-<%# Паршиал для отображения инфы об отдельном событии %>
-<div class="col-sm-6 col-md-4">
+<div class="col-sm-8 col-md-4 buffer-bottom">
   <div class="thumbnail">
-
     <%= content_tag 'div', '', class: 'event-background',
-        style: "background-image: url(#{event_photo(event)})" %>
+                    style: "background-image: url(#{event_photo(event)})" %>
 
     <div class="thumbnail-inner event-info-inner">
       <div class="caption">
@@ -13,11 +11,11 @@
           <div class="buffer-both"><%= event.address %></div>
         </div>
       </div>
+      <div>
+        <% event.visitors.each do |user| %>
+          <%= image_tag user_avatar_thumb(user), class: 'img-icon', title: user.name %>
+        <% end %>
+      </div>
     </div>
   </div>
-  <div>
-  <% event.visitors.each do |user| %>
-    <%= image_tag user_avatar_thumb(user), class: 'img-icon', title: user.name %>
-  <% end %>
-</div>
 </div>
