fix minutes step for time selection for event

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -19,7 +19,7 @@
                      value: l(event.datetime, format: :short),
                      class: 'datepicker-here form-control',
                      'data-timepicker' => true,
-                     'minutes-step' => '5' %>
+                     'data-minutes-step' => '5' %>
   </div>
 
   <div class="form-group">
