change button style for pincode

--- a/app/views/events/pincode_form.html.erb
+++ b/app/views/events/pincode_form.html.erb
@@ -8,7 +8,7 @@
     </div>
 
     <div class="actions">
-      <%= submit_tag t('action.save') %>
+      <%= submit_tag t('action.save'), class: 'btn btn-primary' %>
     </div>
   <% end %>
 
