add yandex map for event

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
   <%= stylesheet_pack_tag 'application', media: 'all' %>
   <%= javascript_pack_tag 'application' %>
+  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=<%= ENV['YANDEX_API_KEY'] %>" type="text/javascript"></script>
 </head>
 
 <body>
