--- a/app/frontend/stylesheets/application.scss
+++ b/app/frontend/stylesheets/application.scss
@@ -1,14 +1,6 @@
-@import './bootstrap_custom.scss';
-@import '@fortawesome/fontawesome-free';
+@import 'bootstrap_custom.scss';
 
-@import "./bbq";
-@import "./events";
-@import "./users";
-
-
-//### 1. Add the entire bootstrap framework javascript and css
-//@import 'bootstrap/scss/bootstrap';
-
-//OR
-//### 2. Hand-pick the resources we are going to use in our app
-//@import './bootstrap_custom.scss';
+@import "bbq";
+@import "events";
+@import "users";
+@import "map.css";
