--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,12 +1,10 @@
 <div class="event">
   <div class="event-info row">
     <div class="col-md-12">
-
-      <%= content_tag 'div', '', class: 'event-background',
-                      style: "background-image: url(#{event_photo(@event)})" %>
-
-      <div class="event-info-inner row">
-        <div class="col-md-6">
+      <div class="row">
+        <div class="col-lg-6 col-md-6 event-info-inner">
+          <%= content_tag 'div', '', class: 'event-background',
+                          style: "background-image: url(#{event_photo(@event)})" %>
           <div class="event-description">
             <h1><%= @event.title %></h1>
             <h3><%= l @event.datetime, format: :short %></h3>
@@ -25,6 +23,10 @@
               </div>
             <% end %>
           </div>
+        </div>
+
+        <div class="col-lg-6 col-md-6">
+          <div id="map" data-address="<%= @event.address %>"></div>
         </div>
       </div>
     </div>
