--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -34,9 +34,12 @@
 
   <div class="row">
     <div class="col-md-8">
-      <div class="event-photos">
-        <div class="event-photos-gallery">
+      <div class="row justify-content-center">
+        <div class="col-md-8">
           <%= render partial: 'photos/photo', collection: @event.photos.persisted.except(@photo) %>
+          <a href="https://unsplash.it/1200/768.jpg?image=251" data-toggle="lightbox">
+                <img src="https://unsplash.it/50.jpg?image=251" class="img-fluid">
+            </a>
         </div>
       </div>
 
