--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -1,6 +1,5 @@
-<div class="event-photo buffer-both">
-  <%= link_to image_tag(photo.photo.thumb.url), photo.photo.url %>
+<% image_title = "Добавил #{render partial: 'users/user', object: photo.user}" %>
 
-  Добавил <%= render partial: 'users/user', object: photo.user %>
-</div>
-
+<%= link_to image_tag(photo.photo.thumb.url, class: "img-fluid"),
+            photo.photo.url,
+            data: {toggle: 'lightbox', title: image_title, gallery: 'gallery'} %>
