add feature specs

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -26,7 +26,7 @@
         </div>
 
         <div class="col-lg-6 col-md-6">
-          <div id="map" data-address="<%= @event.address %>"></div>
+          <div class="yandex-map" id="map" data-address="<%= @event.address %>"></div>
         </div>
       </div>
     </div>
