fix README - add demo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
   </div><!--/row-->
 </div> <!-- /container -->
 
-<footer class="page-footer font-large blue">
+<footer>
   <div class="text-center py-3">© 2020 Copyright:
     <a href="https://bikmansurov.ru"> <%= t('app.company') %></a>
   </div>
