--- a/app/views/event_mailer/subscription.html.erb
+++ b/app/views/event_mailer/subscription.html.erb
@@ -1,14 +1,8 @@
-<h1><%= t '.title' %></h1>
+<h2><%= t '.title' %>:</h2>
 <p><%= t '.name' %>: <strong><%= @name %></strong></p>
 <p><%= t '.email' %>: <strong><%= link_to @email, "mailto:#{@email}" %></strong></p>
 <hr/>
 
-<%= t '.event' %>
-
-<h3><%= link_to @event.title, event_url(@event) %></h3>
-
-<%= t '.datetime' %>
-<h4><%= l @event.datetime %></h4>
-
-<%= t '.owner' %>
-<h4><%= @event.user.name %></h4>
+<h3><%= t '.event' %>: <%= link_to @event.title, event_url(@event) %></h3>
+<h4><%= t '.datetime' %>: <%= l @event.datetime %></h4>
+<h4><%= t '.owner' %>: <%= @event.user.name %></h4>
