--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,8 +7,13 @@
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="form-group">
+        <%= f.label :name %>
+        <%= f.text_field :name, autofocus: true, class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
         <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, placeholder: 'Email Address', class: 'form-control' %>
+        <%= f.email_field :email, placeholder: 'Email Address', class: 'form-control' %>
       </div>
 
       <div class="form-group">
