--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,10 +47,14 @@
   <div class="row">
     <div class="col-lg-12">
       <% flash.each do |key, value| %>
-        <div class="alert alert-<%= key %>" role="alert">
+        <div class="alert alert-<%= key %> alert-dismissible fade show" role="alert">
           <%= value %>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
       <% end %>
+
       <%= yield %>
     </div>
   </div><!--/row-->
