--- a/app/views/partials/_form_errors.html.erb
+++ b/app/views/partials/_form_errors.html.erb
@@ -1,7 +1,7 @@
 <% errors = model.errors %>
 
 <% if errors.any? %>
-  <div class="alert alert-danger">
+  <div class="alert alert-danger alert-dismissible fade show" role="alert">
     <span><%= I18n.t("errors.messages.not_saved",
                      count: errors.count,
                      resource: model.class.model_name.human)
@@ -11,5 +11,10 @@
         <li><%= message %></li>
       <% end %>
     </ul>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
   </div>
 <% end %>
+
+
