--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,3 +1,7 @@
-<h1>Изменить событие</h1>
+<div class="row">
+  <div class="col-lg-8 col-md-6 ml-auto mr-auto">
+    <h1>Изменить событие</h1>
 
-<%= render partial: 'form', locals: { event: @event } %>
+    <%= render partial: 'form', locals: { event: @event } %>
+  </div>
+</div>
