--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,7 +1,6 @@
-<h1>Новое событие</h1>
-
 <div class="row">
-  <div class="col-md-8 buffer-top">
+  <div class="col-lg-8 col-md-6 ml-auto mr-auto">
+    <h1>Новое событие</h1>
     <%= render partial: 'form', locals: { event: @event } %>
   </div>
 </div>
