--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,12 +1,14 @@
 <%= form_for [@event, photo], html: { multipart: true } do |f| %>
   <%= render partial: 'partials/form_errors', locals: {model: photo} %>
 
-  <div class="form-group">
-    <%= f.label :photo %>
-    <%= f.file_field :photo %>
-  </div>
+  <div class="form-row align-items-center">
+    <div class="col-auto custom-file">
+      <%= f.label :photo, class: 'custom-file-label' %>
+      <%= f.file_field :photo, class: 'form-control-file', required: true %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit t('action.upload'), class: 'btn btn-primary' %>
+    <div class="col-auto">
+      <%= f.submit t('action.upload'), class: 'btn btn-primary' %>
+    </div>
   </div>
 <% end %>
