--- a/app/views/subscriptions/_form.html.erb
+++ b/app/views/subscriptions/_form.html.erb
@@ -1,19 +1,23 @@
 <%= form_for [@event, subscription] do |f| %>
     <%= render partial: 'partials/form_errors', locals: {model: subscription} %>
 
+    <div class="form-row align-items-top mb-2">
+
     <% unless user_signed_in? %>
-        <div class="form-group">
-          <%= f.label :user_name %>
-          <%= f.text_field :user_name, class: 'form-control' %>
+       <div class="col custom">
+          <%= f.text_field :user_name, class: 'form-control', required: true, placeholder: 'Имя подписчика' %>
         </div>
+      <% end %>
+      </div>
+      <div class="form-row align-items-bottom mb-2">
+        <% unless user_signed_in? %>
+            <div class="col custom">
+              <%= f.text_field :user_email, class: 'form-control', required: true, placeholder: 'Email' %>
+            </div>
+        <% end %>
 
-        <div class="form-group">
-          <%= f.label :user_email %>
-          <%= f.text_field :user_email, class: 'form-control' %>
+        <div class="col-auto">
+          <%= f.submit I18n.t('action.subscribe'), class: 'btn btn-primary' %>
         </div>
-    <% end %>
-
-    <div class="actions">
-      <%= f.submit I18n.t('action.subscribe'), class: 'btn btn-primary' %>
-    </div>
+      </div>
 <% end %>
