fix identification for users from social authentication - identify by email or name

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-lg-12">
+    <div class="col-lg-12 mt-3">
       <% flash.each do |key, value| %>
         <div class="alert alert-<%= key %> alert-dismissible fade show" role="alert">
           <%= value %>
