open privacy policy in the new window

--- a/app/views/devise/shared/_policy.html.erb
+++ b/app/views/devise/shared/_policy.html.erb
@@ -1,4 +1,4 @@
 <div class="form-group">
   Продолжая работу с сайтом, даю согласие на обработку своих персональных данных в соответствии с
-    <a href="https://bikmansurov.ru/privacy_policy.pdf">Политикой конфиденциальности</a>
+    <a href="https://bikmansurov.ru/privacy_policy.pdf" target="_blank">Политикой конфиденциальности</a>
 </div>
