improve comments style

--- a/app/frontend/stylesheets/bootstrap_custom.scss
+++ b/app/frontend/stylesheets/bootstrap_custom.scss
@@ -5,14 +5,14 @@
 @import '~bootstrap/scss/_reboot.scss';
 @import '~bootstrap/scss/_type.scss';
 @import '~bootstrap/scss/_alert.scss';
-@import '~bootstrap/scss/_badge';
-@import '~bootstrap/scss/_breadcrumb';
+// @import '~bootstrap/scss/_badge';
+// @import '~bootstrap/scss/_breadcrumb';
 @import '~bootstrap/scss/_button-group';
 @import '~bootstrap/scss/_buttons.scss';
 @import '~bootstrap/scss/_card.scss';
 @import '~bootstrap/scss/_carousel.scss';
 @import '~bootstrap/scss/_close.scss';
-@import '~bootstrap/scss/_code.scss';
+// @import '~bootstrap/scss/_code.scss';
 @import '~bootstrap/scss/_custom-forms.scss';
 @import '~bootstrap/scss/_dropdown.scss';
 @import '~bootstrap/scss/_forms.scss';
